--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.3.2",
+    "@uniswap/v2-core": "^1.0.1",
     "dotenv": "^16.0.3"
   }
 }
